Fixed table overflow on long link (eg encrypted)

--- a/src/css/_shortcut_table.scss
+++ b/src/css/_shortcut_table.scss
@@ -24,6 +24,11 @@
             color: #222;
         }
 
+        .shortcut-url {
+            // Allow the link to be wrapped to prevent overflow issue
+            word-break: break-all;
+        }
+
         &:hover {
             background-color: #666;
 
